--- a/HowLong/HowLong/Views/SettingsPage.xaml
+++ b/HowLong/HowLong/Views/SettingsPage.xaml
@@ -57,7 +57,7 @@
                                                   CornerRadius="6"
                                                   BackgroundColor="White"
                                                   TextColor="Black"
-                                                   WidthRequest="100"
+                                                  WidthRequest="100"
                                                   Text="{extensions:Translate LightThemeButton}"
                                                   BorderColor="Black"
                                                   BorderWidth="1"/>
@@ -66,7 +66,7 @@
                                                   VerticalOptions="Center"
                                                   HeightRequest="45"
                                                   CornerRadius="6"
-                                                   WidthRequest="100"
+                                                  WidthRequest="100"
                                                   BackgroundColor="Black"
                                                   TextColor="White"
                                                   Text="{extensions:Translate DarkThemeButton}"/>
@@ -137,6 +137,18 @@
                                           BackgroundColor="{StaticResource PrimaryBlueColor}"
                                           TextColor="{DynamicResource PrimaryLightColor}"
                                           Text="{extensions:Translate SupportButton}"/>
+                    <reactive:LightButton x:Name="DevelopBtn"
+                                          HorizontalOptions="CenterAndExpand"
+                                          VerticalOptions="{x:Static device:DeviceSize.VerticalOptions}"
+                                          Margin="{x:Static device:DeviceSize.Margin}"
+                                          HeightRequest="45"
+                                          CornerRadius="6"
+                                          WidthRequest="160"
+                                          BackgroundColor="{DynamicResource PrimaryLightColor}"
+                                          TextColor="DarkGreen"
+                                          Text="{extensions:Translate DevelopTextBtn}"
+                                          BorderColor="DarkGreen"
+                                          BorderWidth="1"/>
                     <reactive:LightLabel VerticalOptions="EndAndExpand"
                                          HorizontalOptions="CenterAndExpand"
                                          FontSize="Small">
